--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "scrabble",
+  "name": "memory-circle",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0-alpha",
+    "react-dom": "^16.7.0-alpha",
     "react-scripts": "2.1.1"
   },
   "scripts": {
